@@ -1,11 +1,18 @@
+* Fix that annoying fucking 404 bug in the craigwatch where it wont stop!
 * Go through the rdoc README and otherwise todos - 
  	* adjust the scrape_ reference(s) to use the CraigScrape.new(*paths) syntax
    * Add a listings: [ brw/apa ] example in both the api and the examples (notice the brw)
    * Make a note about how to think ahead so your memory consumption doesnt get ridiculous
-   
-* Test the examples in README, and publish!
 
-Post-0.8:
+
+* Test the last of the examples, and publish!
+	* TEST: Scrape Single Craigslist Posting
+	* TEST: Scrape Single Craigslist Listing
+
+Post-0.8.0:
+	* Ruby 1.9 support
+	
+Post-0.8.1:
  * FEATURE: Rather then 'search/sss?query=artist+needed', maybe use CraigScrape::search_for('artist needed')
  * FEATURE: Add the craigwatch_debug feature - and monitor it... (There's a TODO in there...)
 	* Shows the current progress...? (pages fetched, objects in caches..) 
